--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,8 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
-
+  lint:
     runs-on: ubuntu-latest
 
     steps:
@@ -46,3 +45,9 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run lint
+      run: cargo fmt --all -- --check
+    - name: Install cargo audit
+      run: cargo install cargo-audit
+    - name: Run cargo audit
+      run: cargo audit
